--- a/html/index.html
+++ b/html/index.html
@@ -40,7 +40,7 @@
 
 		<!-- Application Nodes Hiding/Unhiding Option-->
 		<div id="hide-list">
-			<label for="hide">Hide notes</label>
+			<label for="hide">Hide Notes</label>
 			<input type="checkbox" id="hide">
 		</div>
 		
